<resources>
    <string name="app_name">Al_hussainy_public_school</string>

    <string-array name="who_are_you">
        <item>Admin</item>
        <item>Teacher</item>
        <item>Student</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="name">Full Name</string>
    <string name="username">User Name</string>
    <string name="address">Address</string>
    <string name="mobile_no">Mobile No</string>
    <string name="enter_received_otp">Enter Received OTP</string>
    <string name="registration_form">Registration Form</string>
    <string name="email">Email</string>
    <string name="re_password">Re-Password</string>
    <string name="logo">Logo</string>
    <string name="submit">Submit</string>
    <string name="who_are_you">Who Are You?</string>
    <string-array name="user_type">
        <item>Admin</item>
        <item>Teacher</item>
        <item>Other user</item>
    </string-array>
    <string name="title_activity_admin">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Log Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="home">Home</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">Home fragment</string>
    <string name="add_fragment">Add fragment</string>
    <string name="search_fragment">Search fragment</string>
    <string name="update_fragment">Update fragment</string>
    <string name="delete_fragment">Delete fragment</string>
    <string name="guardian_name">Guardian name</string>
    <string name="student_class">Class</string>
    <string name="section">Section</string>
    <string name="roll_no">Roll No</string>
    <string name="enter_students_details">Enter Student\'s Details</string>
    <string name="or">-------------------OR-----------------</string>
    <string name="gender">M/F</string>
    <string name="student_details">Student\'s Details</string>
    <string name="fee_details">Fee Details</string>
    <string name="attendance_details">Attendance Details</string>
    <string name="last_paid_amt">Last Paid Amt.</string>
    <string name="last_paid_date">Last Paid Date</string>
    <string name="total_advance">Total Advance</string>
    <string name="total_dues">Total Dues</string>
    <string name="total_class">Total Class</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="total_percentage">Total Percentage</string>
    <string name="sign_up">Sign Up?</string>
    <string name="already_user_sign_in">Already user. Sign in?</string>
    <string name="registration_id">Registration Id</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="ahps">AHPS</string>
    <string name="profile">Profile</string>
    <string name="post">post</string>
    <string name="about_us">
        This application is developed for maintenance of our school data.
        Also in the support of digitization.
        Version 1.0.
        Developer -> Md Khushtar Hussain,
        Contact -> 8906518717.
        Email -> khushtar.hussain.kh@gmail.com.
        To give any suggestion for better performance you could contact with me via mailing in the email id given above.
    </string>
    <string name="marks_details">Marks Details</string>
    <string name="sa1">SA1</string>
    <string name="sa2">SA2</string>

</resources>
