<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterTeacherActivity"
    android:gravity="center_horizontal"
    android:background="#C62595C9"
    android:id="@+id/relative">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5sp"
        android:text="@string/registration_form"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/registration"
        android:layout_marginTop="40sp">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edtRegistrationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/edtRegistrationUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="text"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/edtRegistrationEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/edtRegistrationAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="text"
                android:textAlignment="center" />



                <EditText
                    android:id="@+id/edtRegistrationMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:ems="10"
                    android:hint="@string/mobile_no"
                    android:inputType="phone"
                    android:textAlignment="center" />


            <EditText
                android:id="@+id/edtRegistrationPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/edtRegistrationRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="5sp"
                android:hint="@string/re_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="#F8F8F5" />

            <Button
                android:id="@+id/btnRegitrationSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:visibility="visible" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>