<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#C62595C9"
    android:id="@+id/relative">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="122dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:gravity="center"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edtLoginUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:layout_marginTop="10sp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:layout_marginTop="10sp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btnLoginSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="10sp"/>


    </LinearLayout>


</LinearLayout>